--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-aria/button": "^3.5.1",
+    "@react-aria/focus": "^3.6.1",
+    "@react-aria/interactions": "^3.9.1",
+    "@react-aria/overlays": "^3.9.1",
+    "@react-aria/utils": "^3.13.1",
+    "@react-types/button": "^3.5.1",
+    "@react-types/shared": "^3.13.1",
+    "@stitches/react": "^1.2.8",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
