--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@internationalized/date": "^3.0.0",
     "@react-aria/button": "^3.5.1",
     "@react-aria/focus": "^3.6.1",
     "@react-aria/interactions": "^3.9.1",
@@ -19,8 +21,10 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "react": "^18.2.0",
+    "react-aria": "^3.17.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-stately": "^3.15.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
